envoy-sni-http.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: my_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 13333
    listener_filters:
    - name: envoy.filters.listener.proxy_protocol
      typed_config: {}
    - name: envoy.filters.listener.tls_inspector
      typed_config: {}
    filter_chains:
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  path: "/"
                route:
                  cluster: foo.example.com
          http_filters:
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIICzTCCAbWgAwIBAgIUSim5nTUQ0yac5hLHFwZ/gOcg9ZMwDQYJKoZIhvcNAQEL
[...]
                  2A==
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN EC PRIVATE KEY-----
                  MHcCAQEEIMn+w8+w6y+CDCF8cD1A22V3rGR1xxU/G/79aLoAsIrnoAoGCCqGSM49
[...]
                  mxu6MIvl+MHAEl3sk6kygBDfuLEB3aUFyg==
                  -----END EC PRIVATE KEY-----
  clusters:
  - name: foo.example.com
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    protocol_selection: USE_DOWNSTREAM_PROTOCOL
    load_assignment:
      cluster_name: foo.example.com
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 33333
  - name: bar.example.com
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    protocol_selection: USE_DOWNSTREAM_PROTOCOL
    load_assignment:
      cluster_name: bar.example.com
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 33334
